--- a/kirana-store-ws/src/main/resources/application.properties
+++ b/kirana-store-ws/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=9999
 
+spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orclcdb
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/kirana
+spring.datasource.username=root
+spring.datasource.password=@November26
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.hibernate.type=TRACE
