--- a/kirana-store-ws/pom.xml
+++ b/kirana-store-ws/pom.xml
@@ -53,6 +53,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-crypto</artifactId>
+		    <version>5.4.2</version>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
