1. Added web jars of bootstrap and jquery 2. Testing thymeleaf 3. Created index controller

--- a/kirana-store/pom.xml
+++ b/kirana-store/pom.xml
@@ -61,6 +61,26 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	<!-- Bootstrap and Jquery web Jars -->	
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.3.6</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap-datepicker</artifactId>
+		    <version>1.0.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>1.9.1</version>
+		</dependency>
+	<!-- Bootstrap and Jquery web Jars -->
+		
 	</dependencies>
 
 	<build>
