--- a/kirana-store-ws/src/main/resources/application.properties
+++ b/kirana-store-ws/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.datasource.password=@November26
 
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.hibernate.sql=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.sql=DEBUG
+#logging.level.org.hibernate.type=TRACE
+
+spring.security.user.password=123
